Fixed hover scrollbar handle color.

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ img {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #ffece9;
+    background: #474747;
 }
 #home {
     padding-top: 100px !important;
